public enum LightState {
    VERDE,
    AMARELO,
    VERMELHO,
    OFF
}
