public interface SemaforoState {
    void executar(SemaforoController ctx);
}
